--- a/templates/pages/table-filtered.mustache
+++ b/templates/pages/table-filtered.mustache
@@ -136,35 +136,30 @@
       <div class="row">
          <div class="span6 align-left">
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE11A;</span>
+               <span class="win-commandimage win-commandring">&#x0067;</span>
                <span class="win-label">Cerca</span>
             </button>
 
             <hr class="win-command" />
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE117;</span>
+               <span class="win-commandimage win-commandring">&#xe125;</span>
                <span class="win-label">Ricarica</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE120;</span>
+               <span class="win-commandimage win-commandring">&#xE165;</span>
                <span class="win-label">Invia per Email</span>
-            </button>
-
-            <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE118;</span>
-               <span class="win-label">Esporta</span>
             </button>
          </div>
          <div class="span6 align-right">
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE107;</span>
+               <span class="win-commandimage win-commandring">&#xE001;</span>
                <span class="win-label">Elimina</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE109;</span>
+               <span class="win-commandimage win-commandring">&#xe03e;</span>
                <span class="win-label">Aggiungi</span>
             </button>
          </div>
