--- a/templates/partials/header-menu.mustache
+++ b/templates/partials/header-menu.mustache
@@ -6,6 +6,7 @@
    <li><a href="./bootstrap-scaffolding.html">Bootstrap Scaffolding</a></li>
    <li><a href="./bootstrap-base-css.html">Bootstrap Base CSS</a></li>
    <li><a href="./bootstrap-components.html">Bootstrap Components</a></li>
+   <li><a href="./bootstrap-javascript.html">Bootstrap Javascript</a></li>
    <li class="divider"></li>
    <li><a href="./index.html">Home</a></li>
 </ul>
