--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -4,6 +4,6 @@
       <h4>LastName</h4>
    </div>
    <div class="user-info-block">
-      <img id="user-avatar" src="http://www.gravatar.com/avatar/6cc5a644d49a9bfe88bc0819ae7bdea6.png?s=32" alt="user" />
+      <b class="icon-user"></b>
    </div>
 </a>
