--- a/content/css/demo.css
+++ b/content/css/demo.css
@@ -12,11 +12,6 @@
 -------------------------------------------------- */
 body {
    position: relative;
-   /*padding-top: 90px;*/
-   /*background-color: #fff;*/
-   /*background-image: url(../img/grid-18px-masked.png);*/
-   /*background-repeat: repeat-x;*/
-   /*background-position: 0 0;*/
 }
 
 
@@ -625,6 +620,15 @@ form.well {
    background-color: #dff0d8;
    border: 1px solid #d6e9c6;
 }
+
+section#misc .ui-loader {
+   display: block;
+   left: 0;
+   margin: 0;
+   position: relative;
+   top: 0;
+}
+
 
 
 /* Responsive Docs
