--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -17,14 +17,18 @@
    <meta name="description" content=""/>
    <meta name="author" content=""/>
 
+   <!-- remove or comment this line if you want to use the local fonts -->
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap-responsive.css">
    <link rel="stylesheet" type="text/css" href="content/css/metro-ui.css">
    <link rel="stylesheet" type="text/css" href="content/css/metro-tiles.css">
    <link rel="stylesheet" type="text/css" href="content/css/charms.css">
-   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light-grey.css">
+   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light.css">
    <!--<link rel="stylesheet" type="text/css" href="content/css/metro-accent-colors.css">-->
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap-metro-responsive.css">
+   <link rel="stylesheet" type="text/css" href="content/css/icomoon.css">
 
    <!--  these two css are to use only for documentation -->
    <link rel="stylesheet" type="text/css" href="content/css/demo.css">
