--- a/templates/pages/appbar-demo.mustache
+++ b/templates/pages/appbar-demo.mustache
@@ -47,45 +47,45 @@
       <div class="row">
          <div class="span6 align-left">
 
-            <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE10F;</span>
+            <a class="win-command">
+               <span class="win-commandimage win-commandring">&#x0021;</span>
                <span class="win-label">Home</span>
-            </button>
+            </a>
 
             <hr class="win-command" />
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE109;</span>
+               <span class="win-commandimage win-commandring">&#xe03e;</span>
                <span class="win-label">Aggiungi</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE105;</span>
+               <span class="win-commandimage win-commandring">&#x0052;</span>
                <span class="win-label">Salva</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE117;</span>
+               <span class="win-commandimage win-commandring">&#xe125;</span>
                <span class="win-label">Ricarica</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE10B;</span>
+               <span class="win-commandimage win-commandring">&#xe132;</span>
                <span class="win-label">Conferma</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE10A;</span>
+               <span class="win-commandimage win-commandring">&#xe131;</span>
                <span class="win-label">Annulla</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE112;</span>
+               <span class="win-commandimage win-commandring">&#xe1cd;</span>
                <span class="win-label">Precedente</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE111;</span>
+               <span class="win-commandimage win-commandring">&#xe1ca;</span>
                <span class="win-label">Successivo</span>
             </button>
 
@@ -94,47 +94,47 @@
          <div class="span6 align-right">
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE115;</span>
+               <span class="win-commandimage win-commandring">&#xe202;</span>
                <span class="win-label">Impostazioni</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE118;</span>
+               <span class="win-commandimage win-commandring">&#xE01D;</span>
                <span class="win-label">Download</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE11C;</span>
+               <span class="win-commandimage win-commandring">&#xE01F;</span>
                <span class="win-label">Upload</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE119;</span>
+               <span class="win-commandimage win-commandring">&#xE165;</span>
                <span class="win-label">Invia Email</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE11A;</span>
+               <span class="win-commandimage win-commandring">&#x0067;</span>
                <span class="win-label">Cerca</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE107;</span>
+               <span class="win-commandimage win-commandring">&#xE001;</span>
                <span class="win-label">Elimina</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE188;</span>
+               <span class="win-commandimage win-commandring">&#xe115;</span>
                <span class="win-label">Cartelle</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE13D;</span>
+               <span class="win-commandimage win-commandring">&#xE15F;</span>
                <span class="win-label">Utente</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE125;</span>
+               <span class="win-commandimage win-commandring">&#xE15E;</span>
                <span class="win-label">Gruppi</span>
             </button>
          </div>
