--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -70,28 +70,29 @@
    </div>
 </div>
 
-<div class="marketing marketing container-fluid">
+<div class="marketing metro container-fluid">
    <h1>Features</h1>
    <p class="marketing-byline">BootMetro is built on top of <a href="http://twitter.github.com/bootstrap/index.html">Twitter Bootstrap</a> and inspired by the Metro UI CSS by Sergey Pimenov</p>
 
    <div class="row-fluid">
       <div class="span4">
          <h2>Create your Hub</h2>
-         <div class="thumbnail">
+         <div class="tile wide image">
             <img src="content/img/detail-hub.png" alt="hub" />
          </div>
          <p>Give more focus to your content. With a Metro style app you give users immediately focus on the primary infos, increasing the usability and reducing the distractions.</p>
+         <p>Use the same tile templates as defined for the original Windows 8 MetroUI.</p>
       </div>
       <div class="span4">
-         <h2>App Bar</h2>
-         <div class="thumbnail">
-            <img src="content/img/detail-appbar-2.png" alt="appbar" />
+         <h2>Actions</h2>
+         <div class="tile wide image">
+            <img src="content/img/detail-appbar-1.png" alt="appbar" />
          </div>
-         <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+         <p>Use the ApplicationBar to show contextual icon action</p>
       </div>
       <div class="span4">
-         <h2>App Bar</h2>
-         <div class="thumbnail">
+         <h2>Navigation</h2>
+         <div class="tile wide image">
             <img src="content/img/detail-headermenu.png" alt="headermenu" />
          </div>
          <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
@@ -100,10 +101,17 @@
    <div class="row-fluid">
       <div class="span4">
          <h2>Charms</h2>
-         <div class="thumbnail">
+         <div class="tile wide image">
             <img src="content/img/detail-charms.png" alt="charms" />
          </div>
-      <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+         <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+      </div>
+      <div class="span4">
+         <h2>Font Icons</h2>
+         <div class="tile wide image">
+            <img src="content/img/detail-icons.png" alt="icons" />
+         </div>
+         <p>With the awesome <a href="http://keyamoon.com/icomoon">IcoMoon</a> font icon set, you can use hundreds of font icons with any color and any dimension.</p>
       </div>
    </div>
 </div>
