--- a/templates/pages/tiles-templates.mustache
+++ b/templates/pages/tiles-templates.mustache
@@ -4,7 +4,7 @@
    <div class="row-fluid">
       <div class="span8">
          <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="./index.html"></a>
+            <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
             <h5>{{appname}}</h5>
             <div class="dropdown">
                <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
