Fixed links in bootstrap-javascript

--- a/templates/pages/bootstrap-javascript.mustache
+++ b/templates/pages/bootstrap-javascript.mustache
@@ -51,25 +51,25 @@
       <div class="row-fluid">
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#modals">{{_i}}Modals{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#modals">{{_i}}Modals{{/i}}</a></h3>
             <p>{{_i}}A streamlined, but flexible, take on the traditional javascript modal plugin with only the minimum required functionality and smart defaults.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#dropdowns">{{_i}}Dropdowns{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#dropdowns">{{_i}}Dropdowns{{/i}}</a></h3>
             <p>{{_i}}Add dropdown menus to nearly anything in Bootstrap with this simple plugin. Bootstrap features full dropdown menu support on in the navbar, tabs, and pills.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#scrollspy">{{_i}}Scrollspy{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#scrollspy">{{_i}}Scrollspy{{/i}}</a></h3>
             <p>{{_i}}Use scrollspy to automatically update the links in your navbar to show the current active link based on scroll position.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#tabs">{{_i}}Togglable tabs{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#tabs">{{_i}}Togglable tabs{{/i}}</a></h3>
             <p>{{_i}}Use this plugin to make tabs and pills more useful by allowing them to toggle through tabbable panes of local content.{{/i}}</p>
           </label>
         </div>
@@ -77,46 +77,46 @@
       <div class="row-fluid">
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#tooltips">{{_i}}Tooltips{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#tooltips">{{_i}}Tooltips{{/i}}</a></h3>
             <p>{{_i}}A new take on the jQuery Tipsy plugin, Tooltips don't rely on images&mdash;they use CSS3 for animations and data-attributes for local title storage.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#popovers">{{_i}}Popovers{{/i}}</a> <small class="muted">*</small></h3>
+            <h3><a href="./bootstrap-javascript.html#popovers">{{_i}}Popovers{{/i}}</a> <small class="muted">*</small></h3>
             <p>{{_i}}Add small overlays of content, like those on the iPad, to any element for housing secondary information.{{/i}}</p>
             <p class="muted"><strong>*</strong> {{_i}}Requires <a href="#tooltips">Tooltips</a> to be included{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#alerts">{{_i}}Alert messages{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#alerts">{{_i}}Alert messages{{/i}}</a></h3>
             <p>{{_i}}The alert plugin is a tiny class for adding close functionality to alerts.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#buttons">{{_i}}Buttons{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#buttons">{{_i}}Buttons{{/i}}</a></h3>
             <p>{{_i}}Do more with buttons. Control button states or create groups of buttons for more components like toolbars.{{/i}}</p>
           </label>
         </div>
       </div> <!-- /row -->
-      <div class="row" style="margin-bottom: 9px;">
+      <div class="row-fluid" style="margin-bottom: 9px;">
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#collapse">{{_i}}Collapse{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#collapse">{{_i}}Collapse{{/i}}</a></h3>
             <p>{{_i}}Get base styles and flexible support for collapsible components like accordions and navigation.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#carousel">{{_i}}Carousel{{/i}}</a></h3>
+            <h3><a href="./bootstrap-javascript.html#carousel">{{_i}}Carousel{{/i}}</a></h3>
             <p>{{_i}}Create a merry-go-round of any content you wish to provide an interactive slideshow of content.{{/i}}</p>
           </label>
         </div>
         <div class="span3">
           <label>
-            <h3><a href="./javascript.html#typeahead">Typeahead</a></h3>
+            <h3><a href="./bootstrap-javascript.html#typeahead">Typeahead</a></h3>
             <p>{{_i}}A basic, easily extended plugin for quickly creating elegant typeaheads with any form text input.{{/i}}</p>
           </label>
         </div>
