--- a/templates/partials/header-menu.mustache
+++ b/templates/partials/header-menu.mustache
@@ -1,6 +1,7 @@
 <ul class="dropdown-menu">
    <li><a href="./hub.html">Hub</a></li>
    <li><a href="./tiles-templates.html">Tile Templates</a></li>
+   <li><a href="./listviews.html">ListViews</a></li>
    <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
    <li><a href="./table.html">Demo Table</a></li>
    <li><a href="./icons.html">Icons</a></li>
