--- a/content/css/bootmetro-tiles.css
+++ b/content/css/bootmetro-tiles.css
@@ -564,3 +564,26 @@
    }
 
 
+/* Special undocumented tiles for ads
+-------------------------------------------------- */
+#ad-container {
+   background-color: #0072BC;
+   height: 90px;
+   margin-top: 10px;
+   text-align: center;
+   width: 100%;
+}
+
+/*Button (125x125)*/
+.metro .tile.ad.ad125 {
+   width: 125px;
+   height: 125px;
+   padding: 12px 13px 13px 12px;
+}
+
+/*Small Rectangle (180x150)*/
+.metro .tile.wide.ad.ad125 {
+   width: 180px;
+   height: 150px;
+   padding: 0 65px;
+}
