Fixed styles for alerts

--- a/content/css/metro-ui-light.css
+++ b/content/css/metro-ui-light.css
@@ -1214,8 +1214,8 @@ input.btn, button.btn, a.btn {
 
 .alert .close {
    color: #FFF;
-   opacity: 0.4;
-   filter: alpha(opacity=40);
+   /*opacity: 0.4;*/
+   /*filter: alpha(opacity=40);*/
 }
 
 
