--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -2083,30 +2083,30 @@ header h1 {display: inline;}
    background-color: #D44A26;
    border-color: #D44A26;
    color: #FFF;
+   position: relative;
 }
 
 .modal .close,
 .alert .close {
-	font-family: 'IcoMoon';
-   font-weight: normal;
-   font-size: 14px;
-   line-height: 18px;
-   text-indent: 0;
-   text-shadow: none;
-
-   background-clip: border-box;
-   box-sizing: border-box;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   border-radius: 50%;
-   border-width: 2px;
-   border-style: solid;
-   text-align: center;
+   position: absolute;
+   top: 0;
+   right: 0;
    display: inline-block;
    min-width: 0;
    min-height: 0;
-   width: 20px;
-   height: 20px;
+   width: 30px;
+   height: 30px;
+	font-family: 'IcoMoon';
+   font-weight: normal;
+   font-size: 12px;
+   line-height: 12px;
+   text-indent: 0;
+   text-shadow: none;
+   opacity: 1;
+   background-clip: border-box;
+   box-sizing: border-box;
+   border: 0;
+   text-align: center;
    vertical-align: baseline;
 }
 .modal .close:after,
@@ -2114,6 +2114,11 @@ header h1 {display: inline;}
    content: "\e131";
    font-size: 16px;
 }
+   .modal .close:hover,
+   .alert .close:hover {
+      background-color: rgba(255, 255, 255, 0.4);
+      color: #FFF;
+   }
 
 .alert-success {
    color: #FFFFFF;
@@ -2134,7 +2139,9 @@ header h1 {display: inline;}
    border-color: #2D89F0 ;
 }
 
-
+.alert-heading {
+   font-weight: 600;
+}
 
 
 
